dark mode issue fixed

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,8 +1,8 @@
 :root {
-    --bg : white;
+    --bg: white;
     --textColor: black;
-    --softBg : #f0f0f0;
-    --softTextColor: #626262
+    --softBg: #f0f0f0;
+    --softTextColor: #626262;
 }
 
 * {
@@ -21,6 +21,13 @@ a {
     text-decoration: none;
 }
 
+.light {
+    --bg: #0f172a;
+    --textColor: #ddd;
+    --softBg: #1f273a;
+    --softTextColor: #a6a6a6;
+}
+
 .container {
     min-height: 100vh;
     background-color: var(--bg);
@@ -33,32 +40,32 @@ a {
     padding: 0 80px;
 }
 
-@media screen and (max-width:1536px) {
+@media screen and (max-width: 1536px) {
     .wrapper {
         max-width: 1366px;
     }
 }
 
-@media screen and (max-width:1280px) {
+@media screen and (max-width: 1280px) {
     .wrapper {
         max-width: 1024px;
     }
 }
 
-@media screen and (max-width:1024px) {
+@media screen and (max-width: 1024px) {
     .wrapper {
         max-width: 768px;
         padding: 0 40px;
     }
 }
 
-@media screen and (max-width:768px) {
+@media screen and (max-width: 768px) {
     .wrapper {
         max-width: 640px;
     }
 }
 
-@media screen and (max-width:640px) {
+@media screen and (max-width: 640px) {
     .wrapper {
         max-width: 475px;
     }
