--- a/src/components/navbar/navbar.module.css
+++ b/src/components/navbar/navbar.module.css
@@ -15,4 +15,5 @@
     flex: 1;
     justify-content: flex-end;
     font-size: 20px;
+    align-items: center;
 }
